--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,34 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Obligatorio2021">
         <activity
+            android:name=".viewreuniones.ModificarReunionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".viewreuniones.ReunionMantenimiento"
+            android:exported="false" />
+        <activity
+            android:name=".viewreuniones.CrearReunionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".viewclientes.ClienteModificarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".viewseventos.EventoMantenimiento"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".viewseventos.CrearEventoActivity"
             android:exported="false" />
         <activity
             android:name=".viewseventos.DetalleEventoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".viewseventos.ListarEventos"
             android:exported="false" />
         <activity
             android:name=".viewclientes.ClienteCrearActivity"
@@ -29,13 +50,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
